examples/test/conf/EdgionPlugins/LdapAuth/05_HTTPRoute_default_ldap-auth-basic-scheme.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ldap-auth-basic-scheme-route
  namespace: edgion-default
spec:
  parentRefs:
    - name: edgion-plugins-gateway
      namespace: edgion-test
  hostnames:
    - "ldap-auth-basic-scheme.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: ldap-auth-basic-scheme
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
